--- a/src/main/webapp/estadisticas/estcta_web.xhtml
+++ b/src/main/webapp/estadisticas/estcta_web.xhtml
@@ -49,7 +49,7 @@
                                     </p:column> 
                                     <p:column>
                                         <p:commandButton value="Consulta"  id="ButtonEscta" update="panelEstcta" >
-                                            <f:actionListener   binding="#{estctaBean.onRestEstcta()}"/>
+                                            <f:actionListener   binding="#{estctaBean.onEstcta()}"/>
                                             <f:actionListener   binding="#{estctaBean.onNomCarrera()}"/>
                                             <f:actionListener   binding="#{estctaBean.onDatAlum()}"/>
                                         </p:commandButton>                                        
@@ -61,9 +61,6 @@
 
                                             <p:fileDownload value="#{estctaBean.onImprime('PDF')}" />                                      
                                         </p:commandButton>
-                                        <h:commandButton   action="#{estctaBean.onImprimeXXX()}" value="XXX"   >
-                                            
-                                        </h:commandButton>
                                     </p:column>
                                     <p:column>
                                         <p:commandButton id="ButtonDocx" value="  DOCX  "   ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);"   >                                       
